css/site.css
@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
    body{
      font-family: 'Noto Sans TC', sans-serif;
    }
    .navbar {  
      background-color:#f2f2f2;
      position: fixed;
      top: 0;
      width: 100%;
      height: 30%;
      z-index: 0;
      margin: 0;
      padding: 0;
    }
    .triangle {  
      position: fixed;
      width: 0;
      height: 0;
      border-style: solid;
      border-width: 200px 50px 0 0px;
      border-color: #83E5DE transparent transparent transparent;
      z-index: 3;

    }
/*navbar 平行四邊形&字*/
#nav1{
  width: 10%;
  height: 33%;
  left: 10%;
  top: 67%;
  position: absolute;
  background-color: #F4A22C;
  -ms-transform: skewX(-15deg); /* IE 9 */
  -webkit-transform: skewX(-15deg); /* Safari */
  transform: skewX(-15deg); /* Standard syntax */
}  
#navid1{
  font-size: 1.4em;
  font-weight: 500;
  color: #F2F2F2;
  position: absolute;
  left: 21%;
  top: 10%;
  transform: skewX(15deg);
}
#nav2{
  width: 10%;
  height: 33%;
  left: 21%;
  top: 67%;
  position: absolute;
  /*background-color: #F4A22C;*/
  -ms-transform: skewX(-15deg); /* IE 9 */
  -webkit-transform: skewX(-15deg); /* Safari */
  transform: skewX(-15deg); /* Standard syntax */
}  
#navid2{
  font-size: 1.4em;
  font-weight: 500;
  color: #144959;
  position: absolute;
  left: 21%;
  top: 10%;
  transform: skewX(15deg);
}
#nav3{
  width: 12%;
  height: 33%;
  left: 32%;
  top: 67%;
  position: absolute;
  /*background-color: #F4A22C;*/
  -ms-transform: skewX(-15deg); /* IE 9 */
  -webkit-transform: skewX(-15deg); /* Safari */
  transform: skewX(-15deg); /* Standard syntax */
}  
#navid3{
  font-size: 1.4em;
  font-weight: 500;
  color: #144959;
  position: absolute;
  left: 21%;
  top: 10%;
  transform: skewX(15deg);
}
#nav4{
  width: 13%;
  height: 33%;
  left: 45%;
  top: 67%;
  position: absolute;
  /*background-color: #F4A22C;*/
  -ms-transform: skewX(-15deg); /* IE 9 */
  -webkit-transform: skewX(-15deg); /* Safari */
  transform: skewX(-15deg); /* Standard syntax */
}  
#navid4_1{
  font-size: 1.4em;
  font-weight: 500;
  color: #144959;
  position: absolute;
  left: 15%;
  top: 10%;
  transform: skewX(15deg);
}
#navid4_2{
  font-size: 1.4em;
  font-weight: 500;
  color: #144959;
  position: absolute;
  left: 25%;
  top: 45%;
  transform: skewX(15deg);
}
#nav5{
  width: 12%;
  height: 33%;
  left: 58%;
  top: 67%;
  position: absolute;
  /*background-color: #F4A22C;*/
  -ms-transform: skewX(-15deg); /* IE 9 */
  -webkit-transform: skewX(-15deg); /* Safari */
  transform: skewX(-15deg); /* Standard syntax */
}  
#navid5_1{
  font-size: 1.4em;
  font-weight: 500;
  color: #144959;
  position: absolute;
  left: 15%;
  top: 10%;
  transform: skewX(15deg);
}
#navid5_2{
  font-size: 1.4em;
  font-weight: 500;
  color: #144959;
  position: absolute;
  left: 25%;
  top: 45%;
  transform: skewX(15deg);
}
#nav6{
  width: 12%;
  height: 33%;
  left: 71%;
  top: 67%;
  position: absolute;
  /*background-color: #F4A22C;*/
  -ms-transform: skewX(-15deg); /* IE 9 */
  -webkit-transform: skewX(-15deg); /* Safari */
  transform: skewX(-15deg); /* Standard syntax */
}  
#navid6{
  font-size: 1.4em;
  font-weight: 500;
  color: #144959;
  position: absolute;
  left: 14%;
  top: 10%;
  transform: skewX(15deg);
}
#nav7{
  width: 10%;
  height: 33%;
  left: 84%;
  top: 67%;
  position: absolute;
  /*background-color: #F4A22C;*/
  -ms-transform: skewX(-15deg); /* IE 9 */
  -webkit-transform: skewX(-15deg); /* Safari */
  transform: skewX(-15deg); /* Standard syntax */
}  
#navid7{
  font-size: 1.4em;
  font-weight: 500;
  color: #144959;
  position: absolute;
  left: 21%;
  top: 10%;
  transform: skewX(15deg);
}  

.hp-img_wrapper { 
  float: left;
  padding: 0;
  margin: 0;
  width: 200vh;
  height: 80vh;
  /*min-height: 50px;*/
  margin: 0;
  position: relative;
  top: 63.5%;
  overflow:hidden;
  z-index: 0;
  border-top: 3px solid #F4A22C;
}
.bgd{
  background-size: cover;
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100%;
}

/*關於本室兩個大梯形*/
.navbox1_3{
  width:25%;height:0;margin:11% auto; padding: 0;
  border-right:76px solid transparent;
  border-top:562px solid #F4A22C;  
  z-index: 10;
  position: absolute;
  opacity: 0.8;
  /*display: none;*/
}
#navboxw1_3{
  color: #FFFFFF;
  position: absolute;
  bottom: 350px;
  left: 20%;
  font-size: 1.1em;
  line-height: 32px;
}
#navboxw1_3_1{
  color: #FFFFFF;
  position: absolute;
  bottom: 300px;
  left: 20%;
  font-size: 1.3em;
}
#navboxw1_3_2{
  color: #244958;
  position: absolute;
  bottom: 265px;
  left: 20%;
  font-size: 1.3em;
}
#navboxw1_3_3{
  color: #FFFFFF;
  position: absolute;
  bottom: 230px;
  left: 20%;
  font-size: 1.3em;
}
#navboxw1_3_4{
  color: #FFFFFF;
  position: absolute;
  bottom: 195px;
  left: 20%;
  font-size: 1.3em;
}
#navboxw1_3_5{
  color: #FFFFFF;
  position: absolute;
  bottom: 160px;
  left: 20%;
  font-size: 1.3em;
}

.navbox1_4{
  width:79%;height:0;margin:11% auto; padding: 0; /*改寬度，改高低位置*/
  border-left:77px solid transparent;  /*改傾斜度*/
  border-bottom:562px solid #144959;  /*改高度*/
  z-index: 8;
  position: absolute;
  right: 0;
}

.navbox2{
  width:30%;height:0;margin:10.2% auto; padding: 0;
  border-right:80px solid transparent;
  border-top:373px solid #F4A22C;  
  z-index: 10;
  position: absolute;
  opacity: 0.8;
  display: none;
}
.navbox2_2{
  width:75%;height:0;margin:10.2% auto; padding: 0;
  border-left:80px solid transparent;
  border-bottom:372px solid #144959;  
  z-index: 10;
  position: absolute;
  /*opacity: 0.8;*/
  right: 0;
  display: none;
}
.navbox3{
  width:30%;height:0;margin:10.2% auto; padding: 0;
  border-right:80px solid transparent;
  border-top:373px solid #F4A22C;  
  z-index: 10;
  position: absolute;
  opacity: 0.8;
  display: none;
}
.navbox3_2{
  width:75%;height:0;margin:10.2% auto; padding: 0;
  border-left:80px solid transparent;
  border-bottom:372px solid #144959;  
  z-index: 10;
  position: absolute;
  /*opacity: 0.8;*/
  right: 0;
  display: none;
}
.navbox4{
  width:30%;height:0;margin:10.2% auto; padding: 0;
  border-right:80px solid transparent;
  border-top:373px solid #F4A22C;  
  z-index: 10;
  position: absolute;
  opacity: 0.8;
  display: none;
}
.navbox4_2{
  width:75%;height:0;margin:10.2% auto; padding: 0;
  border-left:80px solid transparent;
  border-bottom:372px solid #144959;  
  z-index: 10;
  position: absolute;
  /*opacity: 0.8;*/
  right: 0;
  display: none;
}
.navbox5{
  width:30%;height:0;margin:10.2% auto; padding: 0;
  border-right:80px solid transparent;
  border-top:373px solid #F4A22C;  
  z-index: 10;
  position: absolute;
  opacity: 0.8;
  display: none;
}
.navbox5_2{
  width:75%;height:0;margin:10.2% auto; padding: 0;
  border-left:80px solid transparent;
  border-bottom:372px solid #144959;  
  z-index: 10;
  position: absolute;
  /*opacity: 0.8;*/
  right: 0;
  display: none;
}
.navbox6{
  width:30%;height:0;margin:10.2% auto; padding: 0;
  border-right:80px solid transparent;
  border-top:373px solid #F4A22C;  
  z-index: 10;
  position: absolute;
  opacity: 0.8;
  display: none;
}
.navbox6_2{
  width:75%;height:0;margin:10.2% auto; padding: 0;
  border-left:80px solid transparent;
  border-bottom:372px solid #144959;  
  z-index: 10;
  position: absolute;
  /*opacity: 0.8;*/
  right: 0;
  display: none;
}
.navbox7{
  width:30%;height:0;margin:10.2% auto; padding: 0;
  border-right:80px solid transparent;
  border-top:373px solid #F4A22C;  
  z-index: 10;
  position: absolute;
  opacity: 0.8;
  display: none;
}
.navbox7_2{
  width:75%;height:0;margin:10.2% auto; padding: 0;
  border-left:80px solid transparent;
  border-bottom:372px solid #144959;  
  z-index: 10;
  position: absolute;
  /*opacity: 0.8;*/
  right: 0;
  display: none;
}
/*關於本室navbox1字*/
#navboxw1{
  color: #FFFFFF;
  position: absolute;
  bottom: 8em;
  left: 2.8em;
  font-size: 1.5em;
  line-height: 32px;
}
#navboxw1_2{
  color: #FFFFFF;
  position: absolute;
  top: 4em;
  left: 3em;
  font-size: 1.5em;
  line-height: 40px;
}

.container{
  position: relative;
  top: -10vh;
  left: 0px;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

#gallery{
  position: absolute;
  right: 65px;
  left: 15vw;
  z-index: 14;
  border: solid 2px black;
  width: 50vmin;
  height: 60vmin;
  z-index: 14;
}

.img_wrapper{
  float: left;
  width: 38vmin;
  height: 28vmin;
  margin: 1vmin;
  /*overflow: hidden;*/
  z-index: 14;
}

.img{
  background-size: cover;
  width: 200%;
  height: 200%;
}

.events-content{
  height: 60vh;
}

.events-content > ol > li > div {
  height: 60vh;
}

p#s1+p#s1_1{
  display: none;
}

p#s1:hover +p#s1_1{
  display: block;
}

p#s2+p#s2_1{
  display: none;
}

p#s2:hover +p#s2_1{
  display: block;
}

p#s3+p#s3_1{
  display: none;
}

p#s3:hover +p#s3_1{
  display: block;
}

p#s4+p#s4_1{
  display: none;
}

p#s4:hover +p#s4_1{
  display: block;
}

p#s5+p#s5_1{
  display: none;
}

p#s5:hover +p#s5_1{
  display: block;
}

/*關於本室，訊息公告.....hover後橘色效果*/
#nav1:hover{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav1:hover #navid1{
  background-color: #F4A22C;
  color: #F2F2F2;
}

#nav2:hover{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav2:hover #navid2{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav3:hover{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav3:hover #navid3{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav4:hover{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav4:hover #navid4_1{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav4:hover #navid4_2{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav5:hover{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav5:hover #navid5_1{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav5:hover #navid5_2{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav6:hover{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav6:hover #navid6{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav7:hover{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav7:hover #navid7{
  background-color: #F4A22C;
  color: #F2F2F2;
}

/*關於本室，訊息公告.....點擊後橘色效果*/
#nav1.click1{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav1.click1 #navid1{
  background-color: #F4A22C;
  color: #F2F2F2;
}

#nav2.click1{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav2.click1 #navid2{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav3.click1{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav3.click1 #navid3{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav4.click1{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav4.click1 #navid4_1{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav4.click1 #navid4_2{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav5.click1{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav5.click1 #navid5_1{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav5.click1 #navid5_2{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav6.click1{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav6.click1 #navid6{
  background-color: #F4A22C;
  color: #F2F2F2;
}
#nav7.click1{
  background-color: #F4A22C;
  color: #FFFFFF;
}
#nav7.click1 #navid7{
  background-color: #F4A22C;
  color: #F2F2F2;
}

